# whee_tanks

./: .gitignore  Cargo.toml  todo.txt
.cargo/: config.toml
models/: better_shell.ozy  better_tank.ozy  cube.ozy  real_shell.ozy  shell.ozy  shell2.ozy  sphere.ozy  tank.mtl  tank.ozy  tank2.ozy
shaders/: gaussian_blur.frag  glyph.frag  glyph.vert  mapped.frag  mapped.vert  mapped_fragment.glsl  mapped_instanced.vert  mapped_vertex.glsl  mat_fragment.glsl  mat_vertex.glsl  postprocessing.frag  prim_instanced.vert  shadow.vert  ui_button.frag  ui_button.vert
src/: input.rs  main.rs  render.rs  structs.rs  ui.rs
textures/: format_directories.py
