[package]
name = "whee_tanks"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ozy_engine = { git = "https://github.com/NickDriscoll/ozy_engine" }
ozy_engine = { path = "../ozy_engine" }
glfw = "0.32.0"
gl = "0.10.0"
nalgebra-glm = "*"
wavefront_obj = "6.0.0"